# Ragnar

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  makefile  pyproject.toml  start.sh
ollama/: id_ed25519  id_ed25519.pub
src/: main.py  program.py
src/ai/: ollama_client.py
src/services/: __init__.py  base.py  discord.py
src/settings/: __init__.py  manager.py  models.py
src/utils/: logger.py
