[tool.poetry]
name = "ragnar"
version = "0.1.0"
description = "Discord bot for the Ragnarok Server"
authors = ["Spoked"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.9.2"
discord-py = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
